# infermesh

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: guide.md  index.md
docs/api/: client.md  rate_limiter.md  types.md
src/infermesh/: __init__.py  _batch_utils.py  _bucket.py  _cli_bench.py  _cli_support.py  _client_runtime.py  _embedding.py  _generation.py  _transcription.py  _utils.py  _workflow.py  cli.py  client.py  rate_limiter.py  sync_runner.py  types.py
src/infermesh/_workflow/: __init__.py  checkpoint.py  engine.py  mapping.py  models.py  prepare.py  resume.py  runtime.py  source.py
src/lm_client/: __init__.py  _bucket.py  _cli_bench.py  _cli_support.py  _client_runtime.py  _utils.py  cli.py  client.py  rate_limiter.py  sync_runner.py  types.py
tests/: conftest.py  fakes.py  test_cli.py  test_cli_bench.py  test_client_batch.py  test_client_limits.py  test_client_runtime.py  test_rate_limiter.py  test_sync_runner.py  test_workflow.py  time_mock.py
